--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -9,6 +9,19 @@
   padding: 2rem 4rem;
   border-radius: 1.25rem;
 }
+.skills__content:hover {
+  background-color: black;
+  color: white;
+}
+.skills__content:hover .skills__title {
+  color: white;
+}
+.skills__content:hover .bx {
+  color: white;
+}
+.skills__content:hover .skills__name {
+  color: white;
+}
 .skills__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
