--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -49,11 +49,11 @@
   margin-bottom: var(--mb-3);
 }
 .home__img {
-  background: url(../../assets/oMNPpACzTtO5OVERUZwh3Q.webp);
+  background: url(../../assets/satyam.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  box-shadow: inset 0 0 0 9px rgb(255, 255, 255/30%);
+  box-shadow: inset 0 0 0 12px rgba(255, 255, 255, 0.3);
   order: 1;
   justify-self: center;
   width: 300px;
