--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -16,10 +16,21 @@
 .about__box {
   background-color: var(--container-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: center;
+  border-radius: 1rem;
   text-align: center;
   padding: 1rem 1.25rem;
 }
+.about__box:hover {
+  background-color: black;
+  color: white;
+}
+.about__box:hover .about__icon {
+  color: white;
+}
+.about__box:hover .about__title {
+  color: white;
+}
+
 .about__icon {
   font-size: 1.5rem;
   color: var(--title-color);
